src/containers/Form/FormLayout.module.css
.Item {
  margin: 20px auto;
  width: 80%;
  text-align: center;
  box-shadow: 0 2px 3px #cccccc;
  border: 1px solid #eeeeee;
  padding: 10px;
  box-sizing: border-box;
}

@media screen and (min-width: 600px) {
  .Item {
    width: 500px;
  }
}

.Input {
  display: flex;
  padding: 8px;
}

.Label {
  width: 50%;
  align-self: center;
  font-weight: bold;
}

.ItemAdd {
  height: 100%;
  background-color: #ffffff;
}

.ItemAddDialog {
  background-color: #ffffff;
}

.Form {
  padding: 16px 53px;
  width: 530px;
  padding-bottom: 40px;
}

.Buttons {
  margin-top: 35px;
  display: flex;
  justify-content: flex-start;
}

.Buttons > :not(:last-child) {
  margin-right: 16px;
}

.Title {
  margin-left: 14px;
  vertical-align: middle;
  height: 40px;
  color: #191c1a;
  display: flex;
  align-items: first baseline;
  font-weight: 700;
  font-size: 38px;
}

.FieldLabel {
  margin-top: 24px;
  vertical-align: middle;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  color: #555555;
  padding-bottom: 14px;
}

.Icon {
  background-color: #eaedec;
  margin-right: 10px;
}

.DeleteIcon {
  margin-right: 9px;
}

.DeleteButton {
  margin-left: auto;
}

.CheckHeader {
  color: #073f24;
  font-weight: 800;
  font-size: 20px;
  margin-left: 40px;
  margin-top: 20px;
}

.CheckBoxes {
  width: 455px;
  height: 200px;
  margin-left: 10px;
  margin-top: 8px;
  background-color: white;
  border-width: 2px;
  border-color: #eaedec;
  border-radius: 12px;
  padding: 15px;
}

.CheckBox {
  color: blue;
}

.Select {
  width: 450px;
  margin-left: 8px;
  margin-top: 8px;
}

@media screen and (max-width: 768px) {
  .Form,
  .ItemAdd,
  .Buttons {
    width: 100%;
  }
}

